# tonado

./: .gitignore  BACKLOG.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  WAS-IST-NEU.md  pyproject.toml
core/: __init__.py  database.py  dependencies.py  main.py  playback_dispatcher.py  settings.py
core/hardware/: detect.py  gpio_buttons.py  gyro.py  (+1 more)
docs/: ARCHITEKTUR.md  AUDIT-2026-03-28.md  BACKUP.md  PERFORMANCE-2026-03-28.md  PRE-BETA-AUDIT.md  ROADMAP.md  UI-GUIDELINES.md  UPDATE.md  UX-AUDIT-2026-03-28.md  VISION.md  entwicklung.md  hardware.md  installation.md
scripts/: install-hooks.sh
system/: firstrun.service  firstrun.sh  imager-wifi-probe.service  imager-wifi-probe.sh  install.sh  power-button.py  setup-ap.sh  tonado-ap.service  tonado.service  uninstall.sh
tests/: conftest.py  mock_mpd.py  test_api.py  test_auth_service.py  test_backup_service.py  test_button_service.py  test_captive_portal.py  test_card_service.py  test_config_service.py  test_connectivity_monitor.py  test_cover.py  test_event_bus.py  test_gyro.py  test_gyro_service.py  test_hardware_detect.py  test_install_script.py  test_library_service.py  test_playback_dispatcher.py  test_player_service.py  test_player_stream.py  test_playlist_service.py  test_rate_limit.py  test_routers.py  test_setup_wizard.py  test_stream_service.py  test_system_service.py  test_timer_service.py  test_websocket_hub.py  test_wifi_service.py
tools/: build-social-preview.py  test_hardware_detect.py
web/: .gitignore  package-lock.json  package.json  svelte.config.js  vite.config.ts
(+121 files in other folders)
