[project]
name = "tonado"
version = "0.3.1-beta"
description = "Open-source kids music box with RFID cards, controlled from your smartphone"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn>=0.34,<1",
    "python-multipart>=0.0.18",
    "python-mpd2>=3.1,<4",
    "aiosqlite>=0.20,<1",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "websockets>=14,<15",
    "PyJWT>=2.10,<3",
    "mutagen>=1.47,<2",
    "defusedxml>=0.7,<1",
    "httpx>=0.28,<1",
]

[project.optional-dependencies]
pi = [
    "spidev>=3.6,<4",
    "smbus2>=0.5,<1",
    "RPi.GPIO>=0.7,<1",
    "gpiod>=2.0",
]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "ruff>=0.9,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
